# JR-Agent-Skills

./: README.md  README_CN.md
agent-browser/: SKILL.md
auto-updater/: _meta.json
claude-code-wrapper/: SKILL.md
doubao-open-tts/: README.md  SKILL.md
excalidraw-flowchart/: README.md  SKILL.md  _meta.json  ai-development.excalidraw  data-sample.json  export-png.js  export.html  render.html  viewer.html
google-images-crawler/: SKILL.md
hf-papers-reporter/: SKILL.md
long-term-task/: .gitignore  CLAUDE.md  README.md  SKILL.md  example.py  long_term_task.py  pyproject.toml
long-term-task/.claude-index/: config.md  index.md
long-term-task/examples/: basic_usage.py
long-term-task/memory/long-term-tasks/: index.md
long-term-task/scripts/: checker.py  dialog.py  executor.py  task_manager.py
long-term-task/src/long_term_task/: __init__.py  checker.py  cli.py  executor.py  manager.py  progress.py  reporter.py  state.py  task.py
long-term-task/templates/: task-template.md
long-term-task/templates/question-sets/: general.md  project-dev.md  research.md
multi-agent-team/: .gitignore  CLAUDE.md  CODE_REVIEW.md  COUNCIL_CHECKLIST.md  COUNCIL_QUICKREF.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PLAN.md  PHASE_2_COMPLETE.md  PM_CHECKLIST.md  PM_QUICKREF.md  QA_VALIDATION_IMPLEMENTATION.md  QA_VALIDATION_QUICKREF.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  REQUIREMENT_CLARIFICATION.md  SKILL.md  SKILL_UPDATE_SUMMARY.md  TODO_LIST.md  agent-workflow.js  council-workflow-simplified-header.js  council-workflow.js  package-lock.json  package.json  (+13 more)
(+252 files in other folders)
