[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "long-term-task"
version = "0.1.0"
description = "通用长期任务管理 Skill - 支持多智能体协作"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "JR", email = "xdrshjr@gmail.com"}
]
keywords = ["task", "agent", "long-running", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ltt = "long_term_task.cli:main"

[project.urls]
Homepage = "https://github.com/xdrshjr/long-term-task"
Repository = "https://github.com/xdrshjr/long-term-task"

[tool.hatch.build.targets.wheel]
packages = ["src/long_term_task"]
